# BaseMail

./: .gitignore  AGENTMAIL-COMPARISON-SUGGESTIONS.md  ATTENTION-BOND-PLAN.md  ATTN-V3-IMPLEMENTATION.md  ATTN-V3-USER-PATHS.md  BASEMAIL-V3-PLAN.md  CLOUDFLARE_RESOURCES.md  DEV-VS-PROD.md  ESCROW-UI-PLAN.md  FEATURE-PLAN.md  HACKATHON-DEV-PLAN.md  HACKATHON-PLAN.md  MPP-INTEGRATION-PLAN.md  README.md  WORLD-ID-PLAN.md  deploy-attention-bond.js  dune-dashboard.html  dune-queries.md  package-lock.json  package.json  test-attention-bond.js  test-attn-v3.js
.github/workflows/: deploy.yml
contracts/: build-info.json  deployment-attention-bond.json  package.json  standard-json-input.json
contracts/contracts/: AttentionBondEscrow.sol  AttentionBondEscrowFlat.sol  PaymentEscrow.sol  (+2 more)
demo-video/: VIDEO-PLAN.md  ambient-bg.aac  concat-v2-norm.txt  concat-v2.txt  concat.txt  heygen-v7-ids.txt  hybrid-concat.txt  mid5.txt  mid6.txt  mid7.txt  middle-audio.aac  middle-concat.txt  middle-script.txt  middle-v4-audio.aac  middle-v4-script.txt  middle-v7-audio.aac  scripts-v2.json  scripts-v3.json  scripts.json  seg_concat.txt  subs-v4.srt  subs-v5.srt  subs-v6-en-final.srt  subs-v6-en-fixed.srt  subs-v6-en.srt  subs-v6-zh.srt  subs-v6.srt  subs-v7.srt  subtitles.srt
mcp/: README.md  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/basemail/: __init__.py  auth.py  client.py
skill/: manifest.yaml
web/: index.html  package.json  tailwind.config.js  vite.config.ts
worker/: package.json  test-api.mjs  test-email.mjs  test-full-flow.mjs  wrangler.toml
(+89 files in other folders)
