[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basemail"
version = "0.1.0"
description = "Official SDK for BaseMail — Email for AI Agents on Base chain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "eth-account>=0.11.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://basemail.ai"
Repository = "https://github.com/nicejudy/basemail-sdk"

[tool.setuptools.packages.find]
include = ["basemail*"]
